# sinkhorn

./: .gitignore  README.md  pyproject.toml
benchmark_results/: benchmark_results.json
docs/: math.md
scripts/: benchmark.py
src/sinkhorn/: __init__.py  autograd.py  sinkhorn.py
src/sinkhorn/pytorch/: __init__.py  balanced.py  implicit_diff.py  unbalanced.py
src/sinkhorn/triton/: __init__.py  forward.py  jvp_kernel.py  lse_kernel.py  utils.py
tests/: conftest.py  test_balanced.py  test_benchmark.py  test_crossval.py  test_gradients.py  test_numerical.py  test_unbalanced.py
